# ciphers-rs

./: README.md
crates/a1z26/: Cargo.toml
crates/a1z26/src/: lib.rs
crates/adfgvx/: Cargo.toml
crates/adfgx/: Cargo.toml
crates/amsco/: Cargo.toml
crates/atbash/: Cargo.toml
crates/baconian/: Cargo.toml
crates/base64/: Cargo.toml
crates/bifid/: Cargo.toml
crates/caeser/src/: lib.rs
crates/cipher-cracker/: Cargo.toml  README.md
crates/cipher-cracker/src/: lib.rs  main.rs
crates/cipher-cracker/tests/: letter.txt
crates/cipher-utils/: Cargo.toml
crates/cipher-utils/src/: alphabet.rs  base64.rs  character_set.rs  cipher_type.rs  dictionary.rs  frequency.rs  lib.rs  score.rs  tabula_recta.rs
crates/ciphers/base64/: Cargo.toml  README.md
crates/ciphers/base64/src/: lib.rs
crates/ciphers/base64/tests/: encrypted_letter.txt
crates/ciphers/caeser/: Cargo.toml
crates/ciphers/columnar-transposition/src/: lib.rs
crates/ciphers/enigma/enigma-cracker/: Cargo.toml
crates/ciphers/enigma/enigma-simulator/: README.md
crates/ciphers/enigma/enigma-simulator/src/: alphabet.rs  lib.rs  reflector.rs  rotor.rs  unsafe_enigma.rs
crates/ciphers/enigma/enigma-simulator/tests/: benchmarks.rs  tests.rs
crates/ciphers/gronsfeld/gronsfeld/: Cargo.toml
crates/ciphers/gronsfeld/gronsfeld-cracker/: Cargo.toml
crates/ciphers/gronsfeld/gronsfeld-cracker/src/: lib.rs
crates/ciphers/gronsfeld/gronsfeld-cracker/tests/: encrypted_letter.txt
crates/ciphers/gronsfeld/gronsfeld/src/: lib.rs
crates/ciphers/hex/: Cargo.toml
crates/ciphers/morse-code/: README.md
crates/ciphers/octal/: Cargo.toml
crates/ciphers/octal/src/: lib.rs
crates/ciphers/one-time-pad/: Cargo.toml  README.md
crates/ciphers/one-time-pad/src/: lib.rs
crates/ciphers/porta/porta/: Cargo.toml
crates/ciphers/porta/porta/src/: lib.rs
crates/ciphers/running-key/running-key/: Cargo.toml  README.md
crates/ciphers/running-key/running-key-cracker/: Cargo.toml
crates/ciphers/running-key/running-key-cracker/src/: lib.rs
crates/ciphers/running-key/running-key/src/: lib.rs
crates/ciphers/vigenere/vigenere/: Cargo.toml  README.md
crates/ciphers/vigenere/vigenere/src/: lib.rs
crates/columnar-transposition/: Cargo.toml
crates/columnar-transposition/tests/: encrypted_letter.txt  letter.txt
crates/enigma/enigma-cracker/: README.md
crates/enigma/enigma-cracker/src/: lib.rs
crates/enigma/enigma-cracker/tests/: encrypted_letter.txt
crates/enigma/enigma-simulator/: Cargo.toml
crates/enigma/enigma-simulator/src/: enigma.rs  safe_enigma.rs
crates/gronsfeld/gronsfeld/: Cargo.toml
crates/gronsfeld/gronsfeld-cracker/: Cargo.toml  README.md
crates/gronsfeld/gronsfeld-cracker/src/: lib.rs
crates/gronsfeld/gronsfeld/src/: lib.rs
crates/hex/src/: lib.rs
crates/hex/tests/: letter.txt
crates/morse-code/: Cargo.toml  README.md
crates/morse-code/src/: lib.rs
crates/octal/: README.md
crates/octal/tests/: letter_octal.txt
crates/one-time-pad/: Cargo.toml
crates/rotate/: Cargo.toml
crates/running-key/running-key/: Cargo.toml
crates/running-key/running-key-cracker/: Cargo.toml
crates/scytale/: Cargo.toml
crates/straddling-checkerboard/: Cargo.toml
crates/trifid/: Cargo.toml
crates/trithemius/: Cargo.toml
crates/ubchi/: Cargo.toml
crates/vigenere/vigenere/: Cargo.toml
crates/vigenere/vigenere-cracker/: Cargo.toml
crates/vigenere/vigenere/src/: lib.rs
crates/vigenere/vigenere/tests/: encrypted_letter.txt
