[package]
name = "cipher-cracker"
version = "0.1.0"
edition = "2021"

[dependencies]
cipher-utils = { path = "../cipher-utils", version = "0.1.0" }
enigma-cracker = "0.1.0"
enigma-simulator = "1.3.5"
morse-code-cipher = "0.1.0"

[features]
default = ["enigma", "morse-code"]
enigma = ["dep:enigma-cracker", "dep:enigma-simulator"]
morse-code = ["dep:morse-code-cipher"]
