[package]
name = "cipher-cracker"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.89"
cipher-utils = { path = "../cipher-utils", version = "0.2.0" }
colored = "2.1.0"
enigma-cracker = { path = "../enigma/enigma-cracker", version = "0.1.0", optional = true }
enigma-simulator = { path = "../enigma/enigma-simulator", version = "1.3.5", optional = true }
gronsfeld = { path = "../gronsfeld/gronsfeld", version = "0.2.0", optional = true }
gronsfeld-cracker = { path = "../gronsfeld/gronsfeld-cracker", version = "0.1.0", optional = true }
morse-code-cipher = { path = "../morse-code", version = "0.1.0", optional = true }
octal-cipher = { path = "../octal", version = "0.1.0", optional = true }

[features]
default = ["enigma", "gronsfeld", "morse-code", "octal"]
enigma = ["dep:enigma-cracker", "dep:enigma-simulator"]
morse-code = ["dep:morse-code-cipher"]
gronsfeld = ["dep:gronsfeld", "dep:gronsfeld-cracker"]
octal = ["dep:octal-cipher"]
