[package]
name = "cipher-cracker"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.89"
colored = "2.1.0"
cipher-utils = { path = "../cipher-utils", version = "0.3.0" }
enigma-cracker = { path = "../ciphers/enigma/enigma-cracker", version = "0.1.0", optional = true }
enigma-simulator = { path = "../ciphers/enigma/enigma-simulator", version = "1.3.5", optional = true }
gronsfeld = { path = "../ciphers/gronsfeld/gronsfeld", version = "0.2.0", optional = true }
gronsfeld-cracker = { path = "../ciphers/gronsfeld/gronsfeld-cracker", version = "0.1.0", optional = true }
morse-code-cipher = { path = "../ciphers/morse-code", version = "0.1.0", optional = true }
octal-cipher = { path = "../ciphers/octal", version = "0.1.0", optional = true }
base64-cipher = { path = "../ciphers/base64", version = "0.1.0", optional = true }
vigenere-cracker = { path = "../ciphers/vigenere/vigenere-cracker", version = "0.1.0", optional = true }

[dev-dependencies]
vigenere-lib = { path = "../ciphers/vigenere/vigenere", version = "0.2.0" }

[features]
default = ["enigma", "gronsfeld", "morse-code", "octal", "base64", "vigenere"]
base64 = ["dep:base64-cipher"]
enigma = ["dep:enigma-cracker", "dep:enigma-simulator"]
morse-code = ["dep:morse-code-cipher"]
gronsfeld = ["dep:gronsfeld", "dep:gronsfeld-cracker"]
octal = ["dep:octal-cipher"]
vigenere = ["dep:vigenere-cracker"]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[package.metadata.commands]
test = "cargo test --release -- --nocapture --test-threads=1"
