[package]
name = "cipher-utils"
version = "0.1.0"
description = "A collection of various text and cryptographic analysis utilities for Rust."
authors = ["Violet"]
edition = "2021"
license = "GPL-3.0"
repository = "https://github.com/vi013t/ciphers-rs/crates/cipher-utils"

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.89"
itertools = "0.13.0"
lazy_static = "1.5.0"
strum = "0.26.3"
strum_macros = "0.26.4"
