[package]
name = "vigenere-lib"
version = "0.1.0"
description = "An efficient Vigenere / Running Key encryption and decryption library for Rust."
authors = ["Violet"]
readme = "README.md"
license = "GPL-3.0"

edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.89"
cipher-utils = { version = "0.3.0", path = "../../cipher-utils" }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
