[package]
name = "enigma-cracker"
version = "0.1.0"
description = "A start-from-nothing Enigma cipher decryption library for Rust."
authors = ["Violet"]
edition = "2021"
readme = "README.md"
license = "GPL-3.0"

[lib]
path = "src/lib.rs"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
enigma-simulator = "1.3.5"
