[package]
name = "gronsfeld"
authors = ["Violet"]
description = "A Gronsfeld cipher encryption and decryption library for Rust."
version = "0.2.1"
license = "GPL-3.0"
README = "README.md"
edition = "2021"
repository = "https://github.com/vi013t/ciphers-rs/crates/gronsfeld/gronsfeld"

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.89"
cipher-utils = { path = "../../../cipher-utils", version = "0.3.0" }
