[package]
name = "running-key"
version = "0.1.0"
description = "A running-key cipher encryption and decryption library for Rust."
authors = ["Violet"]
edition = "2021"
readme = "README.md"
license = "GPL-3.0"

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.89"
cipher-utils = { version = "0.3.0", path = "../../../cipher-utils" }
vigenere-lib = { version = "0.1.0", path = "../../vigenere/vigenere" }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
